feat: fully complete server layer